optimize and minify

--- a/website-optimization.html
+++ b/website-optimization.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <title>e-Commerce Website Optimization | Taliferro Group | Infrastructure Fine Tuning</title>
+  <title>Reduce Cart Abandonment</title>
   <meta name="description"
-    content="Discover why website optimization is crucial for online success. Taliferro Group explains the benefits of optimizing your website for improved user experiences and search engine rankings." />
-  <meta name="keywords" content="website optimization, website performance, user experience, search engine rankings, online success, Taliferro Group" />
+    content="Discover effective strategies to minimize cart abandonment and boost sales. Reduce friction in your e-commerce checkout process." />
+  <meta name="keywords" content="cart abandonment, e-commerce checkout, conversion optimization, checkout process, increase sales, reduce abandonment" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="author" content="Taliferro Group">
   <meta name="robots" content="index, follow">
@@ -25,30 +25,31 @@
   <link rel="canonical" href="https://e-commerce.taliferro.com/website-optimization.html">
   <meta content="telephone=no" name="format-detection" />
   <meta name="HandheldFriendly" content="true" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,300;1,400;1,500&amp;display=swap" />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,300;1,400;1,500&amp;display=swap"  media="print" onload="this.media='all'"/>
   <link rel="stylesheet" type="text/css" href="css/vendor.css" />
-  <link rel="stylesheet" type="text/css" href="css/main.css" />
+  <link rel="stylesheet" type="text/css" href="css/main-min.css" />
   <link rel="icon" type="image/x-icon" href="img/general/favicon.ico">
   <link rel="apple-touch-icon" href="img/general/apple-touch-icon.png">
-  <link rel='mask-icon' href='img/general/safari-pinned-tab.svg' color='#5195d9'>
   <meta name="msapplication-TileColor" content="#ffffff" />
   <meta name="theme-color" content="#ffffff" />
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "url": "https://e-commerce.taliferro.com/website-optimization.html",
+      "name": "Reduce Cart Abandonment",
+      "description": "Discover effective strategies to minimize cart abandonment and boost sales. Reduce friction in your e-commerce checkout process.",
+      "mainEntityOfPage": {
+        "@type": "WebSite",
+        "url": "https://e-commerce.taliferro.com"
+      }
+    }
+    </script>
+    
 </head>
 
 <body>
   <div data-barba="wrapper">
-    <div class="preloader preloader_header-menu-hidden mask-reveal" id="js-preloader" data-arts-theme-text="light" data-arts-preloader-logo="secondary">
-      <div class="mask-reveal__layer mask-reveal__layer-1 bg-dark-1">
-        <div class="mask-reveal__layer mask-reveal__layer-2">
-          <div class="preloader__wrapper">
-            <div class="preloader__counter preloader__counter_started me-auto mt-auto underline js-preloader__counter">00%</div>
-            <div class="preloader__content ms-auto mt-auto js-preloader__content">
-              <div class="h6">Loading . . .</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <header class="header header_fixed container-fluid js-header-sticky" id="page-header" data-arts-theme-text="light" data-arts-header-sticky-theme="bg-dark-3" data-arts-header-logo="secondary"
       data-arts-header-sticky-logo="secondary" data-arts-header-sticky-theme-text="light" data-arts-header-overlay-theme-text="light">
       <div class="header__container header__controls">
@@ -91,7 +92,7 @@
                 <div class="header__menu-column col-lg-7 order-lg-2 h-100 d-flex flex-column position-relative bg-dark-2">
                   <div class="header__menu-gradient header__menu-gradient_top"></div>
                   <div class="header__scroll-container js-header-smooth-scroll-container overflow pointer-events-auto">
-                    <div class="header__wrapper-menu"> We Also Speicalize In ... <ul class="menu-overlay js-menu-overlay">
+                    <div class="header__wrapper-menu"> We Also Specialize In ... <ul class="menu-overlay js-menu-overlay">
                         <li class="menu-item-has-children"><a href="https://api-consulting.taliferro.com" data-pjax-link="overlayMenu">
                             <div class="menu-overlay__item-wrapper arts-split-text js-arts-split-text" data-arts-split-text="lines,words" data-arts-split-text-set="lines"
                               data-arts-split-text-overflow-wrap="lines"><span class="menu-overlay__subheading small mb-1">API</span>
@@ -172,7 +173,7 @@
                           </div>
                         </div>
                         <div class="swiper-slide slider-menu__slide" data-arts-hover-class="hover-zoom-underline">
-                          <div data-swiper-parallax-opacity="0.3"><a class="slider-menu__wrapper-image" href="https://api-certification.talierro.com" data-arts-hover="trigger" data-arts-cursor="true"
+                          <div data-swiper-parallax-opacity="0.3"><a class="slider-menu__wrapper-image" href="https://api-certification.taliferro.com" data-arts-hover="trigger" data-arts-cursor="true"
                               data-arts-cursor-hide-native="true" data-arts-cursor-label="View Website" data-arts-cursor-scale="2.4" data-arts-cursor-color="#fff"
                               data-arts-cursor-background-color="#ed4830">
                               <div class="overflow" data-swiper-parallax-y="-25%">
@@ -181,7 +182,7 @@
                                 </div>
                               </div>
                             </a>
-                            <div class="slider-menu__header" data-swiper-parallax-y="-50%"><a class="d-inline-block" href="https://api-certification.talierro.com" data-arts-hover="trigger"
+                            <div class="slider-menu__header" data-swiper-parallax-y="-50%"><a class="d-inline-block" href="https://api-certification.taliferro.com" data-arts-hover="trigger"
                                 data-arts-cursor="true" data-arts-cursor-hide-native="true" data-arts-cursor-label="View Website" data-arts-cursor-scale="2.4" data-arts-cursor-color="#fff"
                                 data-arts-cursor-background-color="#ed4830">
                                 <h3 class="h3 mt-0 mb-2 slider__heading underline-hover__target">API Certification</h3>
@@ -369,7 +370,7 @@
         <section class="section section-masthead text-center pt-xlarge bg-portfolio-2" data-arts-os-animation="true" data-arts-theme-text="light">
           <div class="container-fluid">
             <h1 class="xl section-masthead__heading d-inline-block my-0 arts-split-text js-arts-split-text js-transition-heading" data-arts-split-text="lines,words,chars"
-              data-arts-split-text-set="chars" data-arts-split-text-set-direction="y" data-arts-split-text-set-distance="100%" data-arts-split-text-overflow-wrap="lines">Optimization Services</h1>
+              data-arts-split-text-set="chars" data-arts-split-text-set-direction="y" data-arts-split-text-set-distance="100%" data-arts-split-text-overflow-wrap="lines">Reduce Cart Abandonment</h1>
             <div class="section-masthead__subheading mt-xsmall arts-split-text js-arts-split-text" data-arts-split-text="lines, words" data-arts-split-text-set="words"
               data-arts-split-text-overflow-wrap="lines">
               <ul class="post-meta post-meta_mini">
@@ -421,7 +422,7 @@
                   <section class="section section-content">
                     <div class="section-content__content content js-arts-split-text arts-split-text" data-arts-os-animation="true" data-arts-os-animation-name="animateText"
                       data-arts-split-text="lines" data-arts-split-text-set="lines" data-arts-split-text-overflow-wrap="lines">
-                      <h2 class="h2 mb-lg-0 mb-3">Why Website Optimization Matters</h2>
+                      <h2 class="h2 mb-lg-0 mb-3">Why Reducing Cart Abandonment Matters</h2>
                     </div>
                   </section>
                 </div>
@@ -429,9 +430,7 @@
                   <section class="section section-content">
                     <div class="section-content__content content js-arts-split-text arts-split-text" data-arts-os-animation="true" data-arts-os-animation-name="animateText"
                       data-arts-split-text="lines" data-arts-split-text-set="lines" data-arts-split-text-overflow-wrap="lines">
-                      <p>In a world where every second counts, the speed and functionality of your website can make or break a visitor's impression. Slow-loading pages and a cumbersome user experience
-                        can deter potential customers, leading to missed opportunities. Our Website Optimization services focus on enhancing every aspect of your website, from its design and content
-                        to its technical performance.</p>
+                      <p>Struggling with cart abandonment? Our comprehensive guide offers expert solutions to minimize cart abandonment rates and boost sales. We'll show you how to streamline the checkout process, reduce friction, and increase conversions, ensuring a successful e-commerce journey.</p>
                     </div>
                   </section>
                 </div>
@@ -457,7 +456,7 @@
                   <section class="section section-content">
                     <div class="section-content__content content js-arts-split-text arts-split-text" data-arts-os-animation="true" data-arts-os-animation-name="animateText"
                       data-arts-split-text="lines" data-arts-split-text-set="lines" data-arts-split-text-overflow-wrap="lines">
-                      <h2 class="h2 mb-lg-0 mb-3">The Benefits of Our Website Optimization Services</h2>
+                      <h2 class="h2 mb-lg-0 mb-3">The Benefits of Our e-Commerce Consulting</h2>
                     </div>
                   </section>
                 </div>
@@ -799,7 +798,7 @@
   <script src="js/vendor.js"></script>
   <!-- - VENDOR SCRIPTS -->
   <!-- COMPONENTS -->
-  <script src="js/components.js"></script>
+  <script src="js/components-min.js"></script>
   <!-- - COMPONENTS -->
 </body>
 
