--- a/404.html
+++ b/404.html
@@ -9,36 +9,24 @@
     <meta name="HandheldFriendly" content="true"/>
     <meta name="description" content="Taliferro Group Page Not Found"/>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,300;1,400;1,500&amp;display=swap"/>
-    <link rel="stylesheet" type="text/css" href="/css/vendor.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
-    <link rel="manifest" href="/img/general/manifest.json" />
-    <link rel="icon" type="image/x-icon" href="/img/general/favicon.ico">
-    <link rel="apple-touch-icon" href="/img/general/apple-touch-icon.png">
-    <link rel='mask-icon' href='/img/general/safari-pinned-tab.svg' color='#5195d9'>
+    <link rel="stylesheet" type="text/css" href="https://e-commerce.taliferro.com/css/vendor.css"/>
+    <link rel="stylesheet" type="text/css" href="https://e-commerce.taliferro.com/css/main-min.css"/>
+    <link rel="manifest" href="https://e-commerce.taliferro.com/img/general/manifest.json" />
+    <link rel="icon" type="image/x-icon" href="https://e-commerce.taliferro.com/img/general/favicon.ico">
+    <link rel="apple-touch-icon" href="https://e-commerce.taliferro.com/img/general/apple-touch-icon.png">
+    <link rel='mask-icon' href='https://e-commerce.taliferro.com/img/general/safari-pinned-tab.svg' color='#5195d9'>
     <meta name="msapplication-TileColor" content="#ffffff"/>
     <meta name="theme-color" content="#ffffff"/>
   </head>
   <body>
     <div data-barba="wrapper">
-      <div class="preloader preloader_header-menu-hidden mask-reveal" id="js-preloader" data-arts-theme-text="light" data-arts-preloader-logo="secondary">
-        <div class="mask-reveal__layer mask-reveal__layer-1 bg-dark-1">
-          <div class="mask-reveal__layer mask-reveal__layer-2">
-            <div class="preloader__wrapper">
-              <div class="preloader__counter preloader__counter_started me-auto mt-auto underline js-preloader__counter">00%</div>
-              <div class="preloader__content ms-auto mt-auto js-preloader__content">
-                <div class="h6">Loading ...</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
       <header class="header header_fixed container-fluid js-header-sticky" id="page-header" data-arts-theme-text="light" data-arts-header-sticky-theme="bg-light-1" data-arts-header-logo="secondary" data-arts-header-sticky-logo="primary" data-arts-header-sticky-theme-text="dark" data-arts-header-overlay-theme-text="light">
         <div class="header__container header__controls">
           <div class="row justify-content-between align-items-center">
-            <div class="col-auto header__col header__col-left"><a class="logo" href="/index.html">
+            <div class="col-auto header__col header__col-left"><a class="logo" href="https://e-commerce.taliferro.com/index.html">
                 <div class="logo__wrapper-img">
-                  <img class="logo__img-primary" src="/img/general/taliferro-group-black.png" alt="Taliferro Group" width="120"  />
-                  <img class="logo__img-secondary" src="/img/general/taliferro-group-white.png" alt="Taliferro Group" width="120"  />
+                  <img class="logo__img-primary" src="https://e-commerce.taliferro.com/img/general/taliferro-group-black.png" alt="Taliferro Group" width="120"  />
+                  <img class="logo__img-secondary" src="https://e-commerce.taliferro.com/img/general/taliferro-group-white.png" alt="Taliferro Group" width="120"  />
                 </div></a>
             </div>
             <div class="col-auto header__col d-flex align-items-center">
@@ -70,7 +58,7 @@
                   <div class="header__menu-column col-lg-7 order-lg-2 h-100 d-flex flex-column position-relative bg-dark-2">
                     <div class="header__menu-gradient header__menu-gradient_top"></div>
                     <div class="header__scroll-container js-header-smooth-scroll-container overflow pointer-events-auto">
-                      <div class="header__wrapper-menu"> We Also Speicalize In ... <ul class="menu-overlay js-menu-overlay">
+                      <div class="header__wrapper-menu"> We Also Specialize In ... <ul class="menu-overlay js-menu-overlay">
                           <li class="menu-item-has-children"><a href="https://api-consulting.taliferro.com" data-pjax-link="overlayMenu">
                               <div class="menu-overlay__item-wrapper arts-split-text js-arts-split-text" data-arts-split-text="lines,words" data-arts-split-text-set="lines"
                                 data-arts-split-text-overflow-wrap="lines"><span class="menu-overlay__subheading small mb-1">API</span>
@@ -130,7 +118,7 @@
                                 data-arts-cursor-background-color="#ed4830">
                                 <div class="overflow" data-swiper-parallax-y="-25%">
                                   <div class="w-100 h-100" data-swiper-parallax="true" data-swiper-parallax-y="25%"><img class="swiper-lazy of-cover hover-zoom__zoom" src="#"
-                                      data-src="/img/img-cover-1.webp" width="1920" height="1280" alt="Taliferro Group Main Website" />
+                                      data-src="https://e-commerce.taliferro.com/img/img-cover-1.webp" width="1920" height="1280" alt="Taliferro Group Main Website" />
                                   </div>
                                 </div>
                               </a>
@@ -142,7 +130,7 @@
                                 <div class="w-100"></div>
                                 <div class="d-inline-block slider__subheading">
                                   <ul class="post-meta post-meta_mini">
-                                    <li><a href="/">Company Overview</a>
+                                    <li><a href="https://taliferro.com">Company Overview</a>
                                       <div class="post-meta__divider"></div>
                                     </li>
                                   </ul>
@@ -151,16 +139,16 @@
                             </div>
                           </div>
                           <div class="swiper-slide slider-menu__slide" data-arts-hover-class="hover-zoom-underline">
-                            <div data-swiper-parallax-opacity="0.3"><a class="slider-menu__wrapper-image" href="https://api-certification.talierro.com" data-arts-hover="trigger" data-arts-cursor="true"
+                            <div data-swiper-parallax-opacity="0.3"><a class="slider-menu__wrapper-image" href="https://api-certification.taliferro.com" data-arts-hover="trigger" data-arts-cursor="true"
                                 data-arts-cursor-hide-native="true" data-arts-cursor-label="View Website" data-arts-cursor-scale="2.4" data-arts-cursor-color="#fff"
                                 data-arts-cursor-background-color="#ed4830">
                                 <div class="overflow" data-swiper-parallax-y="-25%">
                                   <div class="w-100 h-100" data-swiper-parallax="true" data-swiper-parallax-y="25%"><img class="swiper-lazy of-cover hover-zoom__zoom" src="#"
-                                      data-src="/img/img-cover-2.webp" width="1920" height="1280" alt="API Security Certification Website" />
+                                      data-src="https://e-commerce.taliferro.com/img/img-cover-2.webp" width="1920" height="1280" alt="API Security Certification Website" />
                                   </div>
                                 </div>
                               </a>
-                              <div class="slider-menu__header" data-swiper-parallax-y="-50%"><a class="d-inline-block" href="https://api-certification.talierro.com" data-arts-hover="trigger"
+                              <div class="slider-menu__header" data-swiper-parallax-y="-50%"><a class="d-inline-block" href="https://api-certification.taliferro.com" data-arts-hover="trigger"
                                   data-arts-cursor="true" data-arts-cursor-hide-native="true" data-arts-cursor-label="View Website" data-arts-cursor-scale="2.4" data-arts-cursor-color="#fff"
                                   data-arts-cursor-background-color="#ed4830">
                                   <h3 class="h3 mt-0 mb-2 slider__heading underline-hover__target">API Certification</h3>
@@ -168,7 +156,7 @@
                                 <div class="w-100"></div>
                                 <div class="d-inline-block slider__subheading">
                                   <ul class="post-meta post-meta_mini">
-                                    <li><a href="#">API Security Check</a>
+                                    <li><a href="https://api-certification.taliferro.com">API Security Check</a>
                                       <div class="post-meta__divider"></div>
                                     </li>
                                   </ul>
@@ -182,7 +170,7 @@
                                 data-arts-cursor-background-color="#ed4830">
                                 <div class="overflow" data-swiper-parallax-y="-25%">
                                   <div class="w-100 h-100" data-swiper-parallax="true" data-swiper-parallax-y="25%"><img class="swiper-lazy of-cover hover-zoom__zoom" src="#"
-                                      data-src="/img/img-cover-5.webp" width="1920" height="1280" alt="API Consultation Website" />
+                                      data-src="https://e-commerce.taliferro.com/img/img-cover-5.webp" width="1920" height="1280" alt="API Consultation Website" />
                                   </div>
                                 </div>
                               </a>
@@ -208,7 +196,7 @@
                                 data-arts-cursor-background-color="#ed4830">
                                 <div class="overflow" data-swiper-parallax-y="-25%">
                                   <div class="w-100 h-100" data-swiper-parallax="true" data-swiper-parallax-y="25%"><img class="swiper-lazy of-cover hover-zoom__zoom" src="#"
-                                      data-src="/img/img-cover-7.webp" width="1920" height="1280" alt="eCommerce Consulting" />
+                                      data-src="https://e-commerce.taliferro.com/img/img-cover-7.webp" width="1920" height="1280" alt="eCommerce Consulting" />
                                   </div>
                                 </div>
                               </a>
@@ -234,7 +222,7 @@
                                 data-arts-cursor-background-color="#ed4830">
                                 <div class="overflow" data-swiper-parallax-y="-25%">
                                   <div class="w-100 h-100" data-swiper-parallax="true" data-swiper-parallax-y="25%"><img class="swiper-lazy of-cover hover-zoom__zoom" src="#"
-                                      data-src="/img/website-development.webp" width="1920" height="1280" alt="Website and Bespoke Software Development Website" />
+                                      data-src="https://e-commerce.taliferro.com/img/website-development.webp" width="1920" height="1280" alt="Website and Bespoke Software Development Website" />
                                   </div>
                                 </div>
                               </a>
@@ -260,7 +248,7 @@
                                 data-arts-cursor-background-color="#ed4830">
                                 <div class="overflow" data-swiper-parallax-y="-25%">
                                   <div class="w-100 h-100" data-swiper-parallax="true" data-swiper-parallax-y="25%"><img class="swiper-lazy of-cover hover-zoom__zoom" src="#"
-                                      data-src="/img/cloud-architecture.webp" width="1920" height="1280" alt="Cloud Architecture Consultation" />
+                                      data-src="https://e-commerce.taliferro.com/img/cloud-architecture.webp" width="1920" height="1280" alt="Cloud Architecture Consultation" />
                                   </div>
                                 </div>
                               </a>
@@ -286,7 +274,7 @@
                                 data-arts-cursor-background-color="#ed4830">
                                 <div class="overflow" data-swiper-parallax-y="-25%">
                                   <div class="w-100 h-100" data-swiper-parallax="true" data-swiper-parallax-y="25%"><img class="swiper-lazy of-cover hover-zoom__zoom" src="#"
-                                      data-src="/img/machine-learning.webp" width="1920" height="1280" alt="Machine Learning Consultation Website" />
+                                      data-src="https://e-commerce.taliferro.com/img/machine-learning.webp" width="1920" height="1280" alt="Machine Learning Consultation Website" />
                                   </div>
                                 </div>
                               </a>
@@ -312,7 +300,7 @@
                                 data-arts-cursor-background-color="#ed4830">
                                 <div class="overflow" data-swiper-parallax-y="-25%">
                                   <div class="w-100 h-100" data-swiper-parallax="true" data-swiper-parallax-y="25%"><img class="swiper-lazy of-cover hover-zoom__zoom" src="#"
-                                      data-src="/img/agile-project-coaching.webp" width="1920" height="1280" alt="Agile Project Coaching" />
+                                      data-src="https://e-commerce.taliferro.com/img/agile-project-coaching.webp" width="1920" height="1280" alt="Agile Project Coaching" />
                                   </div>
                                 </div>
                               </a>
@@ -352,11 +340,11 @@
                 <div class="col-lg-8">
                   <div class="section-content__content content js-arts-split-text arts-split-text" data-arts-os-animation="true" data-arts-os-animation-name="animateText" data-arts-split-text="lines" data-arts-split-text-set="lines" data-arts-split-text-overflow-wrap="lines">
                     <h1 class="xxl mb-0">Error 404</h1>
-                    <p class="h3">Oops! It seems like you've ventured into uncharted territory. The page you're looking for may have wandered off.
-                      </p><p>Did you know that the HTTP 404 error code was first established in 1992? It's been guiding lost web travelers for quite a while!</p>
+                    <p class="h3">Oops! It seems like you've ventured into uncharted territory. 
+                      </p><p>Did you know that the HTTP 404 error code was first established in 1992? </p>
 
                   </div>
-                  <div class="section-content__wrapper-button mt-md-5 mt-4" data-arts-os-animation="true" data-arts-os-animation-name="animateJump"><a class="button button-circle js-arts-cursor-no-highlight button-circle_big button_bordered bg-light-1" href="/index.html" data-arts-cursor="data-arts-cursor" data-arts-cursor-scale="current" data-arts-cursor-magnetic="data-arts-cursor-magnetic" data-arts-cursor-hide-native="true"><span class="button-circle__label button__label button__label-normal"><span class="button__title">Take Me Home</span></span><span class="button-circle__label button__label button__label-hover"><span class="button__title">Take Me Home</span></span></a>
+                  <div class="section-content__wrapper-button mt-md-5 mt-4" data-arts-os-animation="true" data-arts-os-animation-name="animateJump"><a class="button button-circle js-arts-cursor-no-highlight button-circle_big button_bordered bg-light-1" href="https://e-commerce.taliferro.com/index.html" data-arts-cursor="data-arts-cursor" data-arts-cursor-scale="current" data-arts-cursor-magnetic="data-arts-cursor-magnetic" data-arts-cursor-hide-native="true"><span class="button-circle__label button__label button__label-normal"><span class="button__title">Take Me Home</span></span><span class="button-circle__label button__label button__label-hover"><span class="button__title">Take Me Home</span></span></a>
                   </div>
                 </div>
               </div>
@@ -456,10 +444,10 @@
     </div>
     <!-- - PhotoSwipe Lightbox Container -->
     <!-- VENDOR SCRIPTS -->
-    <script src="/js/vendor.js"></script>
+    <script src="https://e-commerce.taliferro.com/js/vendor.js"></script>
     <!-- - VENDOR SCRIPTS -->
     <!-- COMPONENTS -->
-    <script src="/js/components.js"></script>
+    <script src="https://e-commerce.taliferro.com/js/components-min.js"></script>
     <!-- - COMPONENTS -->
   </body>
 </html>
